phase 3 complete - Ready to test and capture

--- a/Factorialiser/Factorialiser/MainWindow.xaml
+++ b/Factorialiser/Factorialiser/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Factorialiser"
         mc:Ignorable="d"
-        Title="Factorialiser " Height="245.945" Width="248.118" ResizeMode="NoResize">
+        Title="Factorialiser " Height="245.945" Width="248.118" ResizeMode="NoResize"
+        Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid>
         <Label x:Name="labelHeaderInput" Content="Enter Number To Calculate its Factorial" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="214"/>
         <TextBox x:Name="textBoxInput" HorizontalAlignment="Left" Height="33" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="214" FontSize="16" TextAlignment="Center"/>
